Multi checkin assets
Description for Multi checkin assets

--- a/Explore/VCSCommitHistory/.VCSCommitHistory.Project.json
+++ b/Explore/VCSCommitHistory/.VCSCommitHistory.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "b5LhAEUwWsMj3aNrjtryO7",
+    "id" : "5t5jjkR797OgU5Kii49xGP",
     "name" : "VCSCommitHistory",
     "type" : "Project",
     "metadata" : {
