--- a/Explore/VCSCommitHistory/.VCSCommitHistory.Project.json
+++ b/Explore/VCSCommitHistory/.VCSCommitHistory.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "5t5jjkR797OgU5Kii49xGP",
+    "id" : "4c15gVUrBPtdRbv0U59DiF",
     "name" : "VCSCommitHistory",
     "type" : "Project",
     "metadata" : {
