--- a/Explore/VCS_V3_PROJECT/.VCS_V3_PROJECT.Project.json
+++ b/Explore/VCS_V3_PROJECT/.VCS_V3_PROJECT.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "0n08TNaf7lMgqN9McO5RIR",
+    "id" : "j45lsbg4DuGd6moNoyYhSB",
     "name" : "VCS_V3_PROJECT",
     "type" : "Project",
     "metadata" : {
