Multi checkin assets
Description for Multi checkin assets

--- a/Explore/VCSCommitHistory/.VCSCommitHistory.Project.json
+++ b/Explore/VCSCommitHistory/.VCSCommitHistory.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "ePuFznWvt0gieSuHLwe3Is",
+    "id" : "kY9HWrYJKcec78qy6GJeSz",
     "name" : "VCSCommitHistory",
     "type" : "Project",
     "metadata" : {
