Multi checkin assets
Description for Multi checkin assets

--- a/Explore/VCSCommitHistory/.VCSCommitHistory.Project.json
+++ b/Explore/VCSCommitHistory/.VCSCommitHistory.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "6uzr5bd6SMlf936uVaAhEi",
+    "id" : "2JLTXreqRakbfdLkWER4Gg",
     "name" : "VCSCommitHistory",
     "type" : "Project",
     "metadata" : {
