Automation summary for Force Undo Checkout testsNTY3OGY0ODMtMjM2MS00OG
Automation Desc:Force Undo Checkout test

--- a/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
+++ b/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "8o5KO1wJME1fADoV00lX0q",
+    "id" : "0naWuDIDq75cAwdA3mpP6g",
     "name" : "VCS_ForceUndoCheckoutTest",
     "type" : "Project",
     "metadata" : {
