Automation summary for Force Undo Checkout testsNzE1NjlmZmMtYjk1OS00OG
Automation Desc:Force Undo Checkout test

--- a/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
+++ b/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "0naWuDIDq75cAwdA3mpP6g",
+    "id" : "8fBMTT73U0IgyGUdHzfdoW",
     "name" : "VCS_ForceUndoCheckoutTest",
     "type" : "Project",
     "metadata" : {
