Automation summary for Force Undo Checkout testsZDU0YzZjYzEtMzA4MC00Yz
Automation Desc:Force Undo Checkout test

--- a/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
+++ b/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "ei8aDR4efoBfnI1UtLpIwo",
+    "id" : "5pMi9OMaBENhSKbFcOVkeR",
     "name" : "VCS_ForceUndoCheckoutTest",
     "type" : "Project",
     "metadata" : {
