Automation summary for Force Undo Checkout testsZjA5M2YxM2MtYzZkMS00Ym
Automation Desc:Force Undo Checkout test

--- a/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
+++ b/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "5pMi9OMaBENhSKbFcOVkeR",
+    "id" : "3JgJxh2ma2IgHoSDsd0cyx",
     "name" : "VCS_ForceUndoCheckoutTest",
     "type" : "Project",
     "metadata" : {
