Automation summary for Force Undo Checkout testsNzE3ZmRkNTUtMWYzNC00NT
Automation Desc:Force Undo Checkout test

--- a/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
+++ b/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "3JgJxh2ma2IgHoSDsd0cyx",
+    "id" : "8oxjOemVr0hg8smXhYo1Yz",
     "name" : "VCS_ForceUndoCheckoutTest",
     "type" : "Project",
     "metadata" : {
