Automation summary for Force Undo Checkout testsNWRkNmViN2MtM2NmOS00Yz
Automation Desc:Force Undo Checkout test

--- a/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
+++ b/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "5gBFfVlEW6bjzQSs9Og3sW",
+    "id" : "3OGVFgdgliQheiIwuAwqg2",
     "name" : "VCS_ForceUndoCheckoutTest",
     "type" : "Project",
     "metadata" : {
