Multi checkin assets
Description for Multi checkin assets

--- a/Explore/VCSCommitHistory/.VCSCommitHistory.Project.json
+++ b/Explore/VCSCommitHistory/.VCSCommitHistory.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "a7noIBPmDfplzmPURziUMO",
+    "id" : "9t4Lktu0ROIkVx3xCeZIYB",
     "name" : "VCSCommitHistory",
     "type" : "Project",
     "metadata" : {
