Automation summary for Force Undo Checkout testsMDdlMTFiNmItNmZkNS00Yz
Automation Desc:Force Undo Checkout test

--- a/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
+++ b/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "4DZWCdgZl0YbUnH0edN2u1",
+    "id" : "4XOKRr5acKtdp0Xgraq4sr",
     "name" : "VCS_ForceUndoCheckoutTest",
     "type" : "Project",
     "metadata" : {
