Automation summary for Force Undo Checkout testsNzcyODJhN2MtYzgyOS00Mz
Automation Desc:Force Undo Checkout test

--- a/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
+++ b/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "4XOKRr5acKtdp0Xgraq4sr",
+    "id" : "d5CNwfG6vGOhEEfl9H9CEw",
     "name" : "VCS_ForceUndoCheckoutTest",
     "type" : "Project",
     "metadata" : {
