Automation summary for Force Undo Checkout testsNmE3YzI5ZmMtODQ4Yy00M2
Automation Desc:Force Undo Checkout test

--- a/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
+++ b/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "d5CNwfG6vGOhEEfl9H9CEw",
+    "id" : "6KJGWKKj2xsdvbFyOnrVAr",
     "name" : "VCS_ForceUndoCheckoutTest",
     "type" : "Project",
     "metadata" : {
