--- a/Explore/VCSCommitHistory/.VCSCommitHistory.Project.json
+++ b/Explore/VCSCommitHistory/.VCSCommitHistory.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "kfOanrIm9ekdcS1o3KaMAz",
+    "id" : "5KHCSDD9n8gkQeEiQfSqOJ",
     "name" : "VCSCommitHistory",
     "type" : "Project",
     "metadata" : {
@@ -18,6 +18,6 @@
     }
   },
   "dataFileExtension" : "json",
-  "updateTime" : "2024-01-22T20:13:33.963Z",
+  "updateTime" : "2024-01-23T20:12:01.774Z",
   "objectRefs" : [ ]
 }
