--- a/Explore/VCS_OtherLanguages_Estáसह_ねがいします_çãâàá/.VCS_OtherLanguages_Estáसह_ねがいします_çãâàá.Project.json
+++ b/Explore/VCS_OtherLanguages_Estáसह_ねがいします_çãâàá/.VCS_OtherLanguages_Estáसह_ねがいします_çãâàá.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "588AWnUOIo9hZ3P7R5aDIn",
+    "id" : "3dxEIZU3dLcckQElpRnjQ6",
     "name" : "VCS_OtherLanguages_Estáसह_ねがいします_çãâàá",
     "type" : "Project",
     "metadata" : {
@@ -18,6 +18,6 @@
     }
   },
   "dataFileExtension" : "json",
-  "updateTime" : "2024-01-23T18:23:48.102Z",
+  "updateTime" : "2024-01-25T17:58:09.521Z",
   "objectRefs" : [ ]
 }
