--- a/Explore/VCSCommitHistory/.VCSCommitHistory.Project.json
+++ b/Explore/VCSCommitHistory/.VCSCommitHistory.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "5KHCSDD9n8gkQeEiQfSqOJ",
+    "id" : "2EpACnVZH09l4OLh6PxdAu",
     "name" : "VCSCommitHistory",
     "type" : "Project",
     "metadata" : {
@@ -18,6 +18,6 @@
     }
   },
   "dataFileExtension" : "json",
-  "updateTime" : "2024-01-23T20:12:01.774Z",
+  "updateTime" : "2024-01-25T19:41:42.582Z",
   "objectRefs" : [ ]
 }
