--- a/Explore/VCS_V3_PROJECT/.VCS_V3_PROJECT.Project.json
+++ b/Explore/VCS_V3_PROJECT/.VCS_V3_PROJECT.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "17ZeSMRbcIwlnX54Ya7lSQ",
+    "id" : "j45lsbg4DuGd6moNoyYhSB",
     "name" : "VCS_V3_PROJECT",
     "type" : "Project",
     "metadata" : {
@@ -18,6 +18,6 @@
     }
   },
   "dataFileExtension" : "json",
-  "updateTime" : "2024-01-25T19:39:29.532Z",
+  "updateTime" : "2024-01-25T20:35:07.384Z",
   "objectRefs" : [ ]
 }
