Automation summary for Force Undo Checkout testsOGFlYThlOWYtMTM4Mi00Yj
Automation Desc:Force Undo Checkout test

--- a/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
+++ b/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "7L2P9Sd4EYfbsscnx35EKi",
+    "id" : "3daqBgfZqiLd9CJqIHtG6n",
     "name" : "VCS_ForceUndoCheckoutTest",
     "type" : "Project",
     "metadata" : {
@@ -18,6 +18,6 @@
     }
   },
   "dataFileExtension" : "json",
-  "updateTime" : "2024-01-24T10:11:26.377Z",
+  "updateTime" : "2024-01-28T08:59:04.931Z",
   "objectRefs" : [ ]
 }
