--- a/Explore/VCSCommitHistory/.VCSCommitHistory.Project.json
+++ b/Explore/VCSCommitHistory/.VCSCommitHistory.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "2EpACnVZH09l4OLh6PxdAu",
+    "id" : "7uIrbDd1CELlb6ZC6VCVY8",
     "name" : "VCSCommitHistory",
     "type" : "Project",
     "metadata" : {
@@ -18,6 +18,6 @@
     }
   },
   "dataFileExtension" : "json",
-  "updateTime" : "2024-01-25T19:41:42.582Z",
+  "updateTime" : "2024-02-01T19:39:11.317Z",
   "objectRefs" : [ ]
 }
