Automation summary for Force Undo Checkout testsOWMxMjhkMjQtMDFmYi00MT
Automation Desc:Force Undo Checkout test

--- a/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
+++ b/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "2gFRphaq3zXjnVsT2nm0ay",
+    "id" : "8BYnizNK5DObE6851epLkq",
     "name" : "VCS_ForceUndoCheckoutTest",
     "type" : "Project",
     "metadata" : {
@@ -18,6 +18,6 @@
     }
   },
   "dataFileExtension" : "json",
-  "updateTime" : "2024-05-14T06:41:39.570Z",
+  "updateTime" : "2024-05-14T06:55:58.501Z",
   "objectRefs" : [ ]
 }
